// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publish Test File via Babel: cjs 1`] = `
"/*! esnext-min v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
\\"use strict\\"
var e=require(\\"lodash/camelCase\\")
function o(e){return e&&\\"object\\"==typeof e&&\\"default\\"in e?e.default:e}require(\\"core-js/modules/es.promise.js\\")
var l=o(e)
console.log(\\"CherryPick Import Lodash:\\",\\"helloWorld\\"===l(\\"hello world\\")),console.log(\\"Package\\",\\"esnext-min\\"),console.log(\\"Target\\",\\"lib\\"),console.log(\\"ES2016 Enabled:\\",!0),new Promise(((e,o)=>{e(\\"resolved\\")})).then((e=>{console.log(\\"Promise:\\",e)}))
console.log(\\"Constant:\\",123)
var s=[1,2,3]
console.log(\\"Supports Array.includes?:\\",s.includes&&s.includes(2))
var r=new Set(s)
console.log(\\"Supports Set:\\",r.add(4)),function(e=!0){console.log(\\"Supports default parameters:\\",e)}()
{let e=\\"inner\\"
console.log(\\"X Value from inner scope:\\",e)}console.log(\\"X Value from outer scope:\\",\\"outer\\")
var n=Object.assign({third:3},{first:1,second:2})
console.log(\\"Destructed:\\",n)
class t{constructor(){console.log(\\"Called constructor\\"),this.helper(),this.instanceProperty=3}helper(){console.log(\\"Called helper\\")}}t()
console.log(\\"Initialized class:\\",new t),async function(){await PromiseHelper()}()
//# sourceMappingURL=index.cjs.min.js.map
"
`;

exports[`Publish Test File via Babel: esm 1`] = `
"/*! esnext-min v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
import o from\\"lodash/camelCase\\"
import\\"core-js/modules/es.promise.js\\"
console.log(\\"CherryPick Import Lodash:\\",\\"helloWorld\\"===o(\\"hello world\\")),console.log(\\"Package\\",\\"esnext-min\\"),console.log(\\"Target\\",\\"lib\\"),console.log(\\"ES2016 Enabled:\\",!0),new Promise(((o,e)=>{o(\\"resolved\\")})).then((o=>{console.log(\\"Promise:\\",o)}))
console.log(\\"Constant:\\",123)
var e=[1,2,3]
console.log(\\"Supports Array.includes?:\\",e.includes&&e.includes(2))
var l=new Set(e)
console.log(\\"Supports Set:\\",l.add(4)),function(o=!0){console.log(\\"Supports default parameters:\\",o)}()
{let o=\\"inner\\"
console.log(\\"X Value from inner scope:\\",o)}console.log(\\"X Value from outer scope:\\",\\"outer\\")
var s=Object.assign({third:3},{first:1,second:2})
console.log(\\"Destructed:\\",s)
class r{constructor(){console.log(\\"Called constructor\\"),this.helper(),this.instanceProperty=3}helper(){console.log(\\"Called helper\\")}}r()
console.log(\\"Initialized class:\\",new r),async function(){await PromiseHelper()}()
//# sourceMappingURL=index.esm.min.js.map
"
`;

exports[`Publish Test File via Babel: umd 1`] = `
"/*! esnext-min v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
!function(e,o){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?o(require(\\"lodash/camelCase\\"),require(\\"core-js/modules/es.promise.js\\")):\\"function\\"==typeof define&&define.amd?define([\\"lodash/camelCase\\",\\"core-js/modules/es.promise.js\\"],o):o((e=\\"undefined\\"!=typeof globalThis?globalThis:e||self)._camelCase)}(this,(function(e){\\"use strict\\"
function o(e){return e&&\\"object\\"==typeof e&&\\"default\\"in e?e.default:e}var l=o(e)
console.log(\\"CherryPick Import Lodash:\\",\\"helloWorld\\"===l(\\"hello world\\")),console.log(\\"Package\\",\\"esnext-min\\"),console.log(\\"Target\\",\\"lib\\"),console.log(\\"ES2016 Enabled:\\",!0),new Promise(((e,o)=>{e(\\"resolved\\")})).then((e=>{console.log(\\"Promise:\\",e)}))
console.log(\\"Constant:\\",123)
var s=[1,2,3]
console.log(\\"Supports Array.includes?:\\",s.includes&&s.includes(2))
var n=new Set(s)
console.log(\\"Supports Set:\\",n.add(4)),function(e=!0){console.log(\\"Supports default parameters:\\",e)}()
{let e=\\"inner\\"
console.log(\\"X Value from inner scope:\\",e)}console.log(\\"X Value from outer scope:\\",\\"outer\\")
var r=Object.assign({third:3},{first:1,second:2})
console.log(\\"Destructed:\\",r)
class t{constructor(){console.log(\\"Called constructor\\"),this.helper(),this.instanceProperty=3}helper(){console.log(\\"Called helper\\")}}t()
console.log(\\"Initialized class:\\",new t),async function(){await PromiseHelper()}()}))
//# sourceMappingURL=index.umd.min.js.map
"
`;
